--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-uglify": "~0.1.0",
     "grunt-contrib-watch": "~0.1.0",
     "grunt-contrib-copy": "~0.4.0",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "twig": ">0.1.0"
   }
 }
